--- a/idp/src/main/resources/localizations/messages.properties
+++ b/idp/src/main/resources/localizations/messages.properties
@@ -2,3 +2,8 @@ Error_E000001=登录失败
 Error_E000002=账号不存在
 Error_E000003=密码不正确
 Error_E000004=账号被锁定
+
+
+bo.label.AdminAccount=管理员账号
+bo.property.label.AdminAccount.firstName=名
+bo.property.label.AdminAccount.lastName=姓
